--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -15,6 +15,8 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 16.3.0
+      - name: Install dependencies
+        run: yarn install
       - name: Build
         run: yarn run build
       - name: Deploy to gh-pages
