updated website url

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "michelbongard.ch.github.io",
+  "name": "michelbongard.ch",
   "version": "0.1.0",
-  "homepage": "https://mbongard.github.io/michelbongard.ch.github.io/",
+  "homepage": "https://michelbongard.ch",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-common-types": "^0.2.36",
