--- a/package.json
+++ b/package.json
@@ -61,5 +61,8 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "prettier": "2.5.1",
     "sass": "^1.45.0"
+  },
+  "resolutions": {
+    "nth-check": "^2.0.1"
   }
 }
