Start updating data

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "michelbongard.ch",
+  "name": "ubaumann.ch",
   "version": "0.1.0",
-  "homepage": "https://www.michelbongard.ch",
+  "homepage": "https://www.ubaumann.ch",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-common-types": "^6.5.1",
