--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Michel Bongard",
-  "name": "Michel Bongard",
+  "short_name": "Urs Baumann",
+  "name": "Urs Baumann",
   "icons": [
     {
       "src": "favicon.ico",
